deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubecit-service-deployment
spec:
  selector:
    matchLabels:
      app: kubecit-service
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: kubecit-service
    spec:
      containers:
        - name: kubecit-service
          image: chaoyue/kubecit-service:latest
          ports:
            - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubecit-web-service
spec:
  selector:
    matchLabels:
      app: kubecit-web-service
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: kubecit-web-service
    spec:
      containers:
        - name: kubecit-web-service
          image: z627062293/cit965-frontend:v1.0.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: kubecit-service
spec:
  selector:
    app: kubecit-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: kubecit-web-service
spec:
  selector:
    app: kubecit-web-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: sandload-nginx
    kubernetes.io/ingress.rule-mix: "false"
    nginx.ingress.kubernetes.io/Access-Control-Allow-Origin: '*'
    nginx.ingress.kubernetes.io/cors-allow-headers: version,token,tid,tId,DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization
    nginx.ingress.kubernetes.io/cors-allow-methods: GET, PUT, POST, DELETE, OPTIONS
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/enable-access-log: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/use-regex: "true"
  creationTimestamp: "2023-08-04T11:14:23Z"
  generation: 1
  labels:
    qcloud-app: applet-open-frontend-gateway
  name: wlb965-gateway
spec:
  rules:
    - host: wlb965.sandload.com
      http:
        paths:
          - backend:
              serviceName: kubecit-service
              servicePort: 8000
            path: /api
            pathType: ImplementationSpecific
          - backend:
              serviceName: kubecit-web-service
              servicePort: 80
            path: /
            pathType: ImplementationSpecific
